--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>FIGMA | Макеты для верстки — Верстка страницы</title>
-	<meta name="description" content="Макет для верстки сайта был взял с телеграм канала FIGMA | Макеты для верстки">
+    <meta charset="UTF-8">
+    <title>FIGMA | Макеты для верстки — Верстка страницы</title>
+    <meta name="description" content="Макет для верстки сайта был взял с телеграм канала FIGMA | Макеты для верстки">
     <link rel="stylesheet" href="css/base.css">
 </head>
+
 <body>
 
     <!-- Начало: Данный блок удалять нельзя -->
@@ -15,18 +17,87 @@
         </a>
         <div>
             <p>
-                Данная верстка, была реализована пользователем в рамках обучающего телеграм канал <a href="https://t.me/s/FigmaToHTML" target="_blank">FIGMA | Макеты для верстки</a>
+                Данная верстка, была реализована пользователем в рамках обучающего телеграм канал <a
+                    href="https://t.me/s/FigmaToHTML" target="_blank">FIGMA | Макеты для верстки</a>
             </p>
             <p>
-                При помощи <a href="https://t.me/HtmlCodeForMoney_bot?from_git" target="_blank">Telegram-бота</a> пользователь получил оплату за верстку этого макета.
+                При помощи <a href="https://t.me/HtmlCodeForMoney_bot?from_git" target="_blank">Telegram-бота</a>
+                пользователь получил оплату за верстку этого макета.
             </p>
         </div>
     </div>
     <!-- Конец -->
 
     <div class="main">
-        В данном блоке размещается верстка
+
+        <header class="header">
+            <div class="container">
+                <div class="header__inner">
+                    <div class="logo"><a href="#!"><img src="./img/logo 1.png" alt="logo"></a></div>
+                    <nav class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item"><a href="#!">Home</a></li>
+                            <li class="nav__item"><a href="#!">About</a></li>
+                            <li class="nav__item"><a href="#!">Chips</a></li>
+                            <li class="nav__item"><a href="#!">Services</a></li>
+                        </ul>
+                    </nav>
+                    <form class="header__form">
+                        <input type="text" class="header__input" placeholder="Search">
+                    </form>
+                </div>
+            </div>
+        </header>
+        <div class="wrap">
+            <div class="container">
+                <div class="main__inner">
+                    <div class="main__desc">
+                        <h1 class="main__title">FLAMIN HOT
+                            NACHOS</h1>
+                        <p class="main__text">Presenting the Classic Nachos with a Flaming Hot Twist. It will Rock your
+                            taste
+                            buds with Chilli & Lime.</p>
+                        <div class="main__add">
+                            <button class="main__cart">Add TO Cart</button>
+                            <button class="main__plus main__buttons"></button>
+                            <div class="main__num--circle"> <span class="main__num">5</span></div>
+                            <button class="main__minus main__buttons"></button>
+                        </div>
+                    </div>
+                    <div class="main__items">
+                        <div class="main__item"> <img src="./img/chili.png" alt="chili"><span>Chilli</span></div>
+                        <div class="main__item"><img src="./img/corn.png" alt="corn"><span>Corn</span></div>
+                        <div class="main__item"> <img src="./img/spices.png" alt="spices"><span>Spices</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__inner">
+                    <div class="footer__card">
+                        <div class="card__title">CRUNCHEX CHILLI</div>
+                        <img class="card__image" src="./img/footer-stars.png" alt="nachos">
+                        <span class="footer__span">₹10</span>
+                        <button class="footer__button">ORDER NOW</button>
+                    </div>
+                    <div class="footer__card">
+                        <div class="card__title">TOMATO TWIST</div>
+                        <img class="card__image" src="./img/footer-stars.png" alt="nachos">
+                        <span class="footer__span">₹10</span>
+                        <button class="footer__button">ORDER NOW</button>
+                    </div>
+                    <div class="footer__card">
+                        <div class="card__title">CHAAT CHASKA</div>
+                        <img class="card__image" src="./img/footer-stars.png" alt="nachos">
+                        <span class="footer__span">₹10</span>
+                        <button class="footer__button">ORDER NOW</button>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 
 </body>
+
 </html>
